--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
     <div id="app"></div>
     <template id="listOfElement">
-      <div></div>
+      <div class="start"></div>
     </template>
     <script type="module" src="/main.js"></script>
   </body>
