--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" data-tabId="page1" href="#">Personnages</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Personnages</a>
+              <li class="nav-item" data-tabId="page2">
+                <a class="nav-link Episodes" href="#">Episodes</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Episodes</a>
+              <li class="nav-item" data-tabId="page3">
+                <a class="nav-link Locations" href="#">Episodes</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
