--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a class="nav-link Episodes" href="#">Episodes</a>
               </li>
               <li class="nav-item" data-tabId="page3">
-                <a class="nav-link Locations" href="#">Episodes</a>
+                <a class="nav-link Locations" href="#">Locations</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
