--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </header>
     <div id="app"></div>
     <template id="listOfElement">
-      <div class="start"></div>
+      <div class="start" id="start"></div>
     </template>
     <script type="module" src="/main.js"></script>
   </body>
