--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         </div>
       </nav>
     </header>
+    <div class="banner" id="banner"><div class="banner-content" id="banner-content"></div></div>
     <div id="app"></div>
     <template id="listOfElement">
       <div class="start" id="start"></div>
